fixed nav spacing

--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -133,8 +133,8 @@ float:left;
 	color: #fff;
 	font-size: 16px;
 	font-weight: bold;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 13px;
+	padding-right: 13px;
 }
 
 .nav ul li a:hover {
